--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -11,15 +11,20 @@
     <div id="quoteDisplay"></div>
     <button id="newQuote">Show New Quote</button>
 
-    <div>
-      <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-      <input
-        id="newQuoteCategory"
-        type="text"
-        placeholder="Enter quote category"
-      />
-      <button id="addQuoteBtn">Add Quote</button>
-    </div>
+    <hr />
+
+    <!-- Dynamic form gets inserted here -->
+    <div id="formContainer"></div>
+
+    <hr />
+
+    <button onclick="exportToJson()">Export Quotes</button>
+    <input
+      type="file"
+      id="importFile"
+      accept=".json"
+      onchange="importFromJsonFile(event)"
+    />
 
     <script src="script.js"></script>
   </body>
