--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,12 +8,18 @@
   <body>
     <h1>Dynamic Quote Generator</h1>
 
+    <!-- Category Filter Dropdown -->
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+    </select>
+
+    <!-- Display Filtered Quotes -->
     <div id="quoteDisplay"></div>
+
     <button id="newQuote">Show New Quote</button>
 
     <hr />
 
-    <!-- Dynamic form gets inserted here -->
     <div id="formContainer"></div>
 
     <hr />
