--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -4,33 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dynamic Quote Generator</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        padding: 2rem;
+        max-width: 600px;
+        margin: auto;
+      }
+
+      #quoteDisplay {
+        background-color: #f4f4f4;
+        padding: 1rem;
+        margin-bottom: 1rem;
+        border-left: 5px solid #ff6565;
+      }
+
+      input,
+      button,
+      select {
+        padding: 0.5rem;
+        margin: 0.3rem 0;
+        width: 100%;
+        box-sizing: border-box;
+      }
+
+      #notification {
+        background-color: #dff0d8;
+        border-left: 5px solid #3c763d;
+        padding: 1rem;
+        margin-top: 1rem;
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <h1>Dynamic Quote Generator</h1>
 
-    <!-- Category Filter Dropdown -->
+    <div id="quoteDisplay">Click the button to see a quote.</div>
+    <button id="newQuote">Show New Quote</button>
+
+    <h3>Add a New Quote</h3>
+    <input type="text" id="newQuoteText" placeholder="Enter a new quote" />
+    <input
+      type="text"
+      id="newQuoteCategory"
+      placeholder="Enter quote category"
+    />
+    <button onclick="addQuote()">Add Quote</button>
+
+    <h3>Filter by Category</h3>
     <select id="categoryFilter" onchange="filterQuotes()">
       <option value="all">All Categories</option>
     </select>
 
-    <!-- Display Filtered Quotes -->
-    <div id="quoteDisplay"></div>
-
-    <button id="newQuote">Show New Quote</button>
-
-    <hr />
-
-    <div id="formContainer"></div>
-
-    <hr />
-
-    <button onclick="exportToJson()">Export Quotes</button>
+    <h3>Import/Export</h3>
     <input
       type="file"
       id="importFile"
       accept=".json"
       onchange="importFromJsonFile(event)"
     />
+    <button onclick="exportToJson()">Export Quotes</button>
+
+    <div id="notification"></div>
 
     <script src="script.js"></script>
   </body>
