--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,65 +8,88 @@
       body {
         font-family: Arial, sans-serif;
         padding: 2rem;
-        max-width: 600px;
-        margin: auto;
+        background: #f5f5f5;
+        color: #333;
+      }
+
+      h1 {
+        text-align: center;
+        color: #444;
       }
 
       #quoteDisplay {
-        background-color: #f4f4f4;
-        padding: 1rem;
-        margin-bottom: 1rem;
-        border-left: 5px solid #ff6565;
+        background: white;
+        padding: 1.5rem;
+        border-radius: 8px;
+        margin: 1rem auto;
+        width: 90%;
+        max-width: 600px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        font-size: 1.1rem;
+        text-align: center;
       }
 
-      input,
-      button,
+      .controls {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        margin-top: 2rem;
+      }
+
+      .controls input,
       select {
         padding: 0.5rem;
-        margin: 0.3rem 0;
-        width: 100%;
-        box-sizing: border-box;
+        font-size: 1rem;
+        width: 80%;
+        max-width: 400px;
       }
 
-      #notification {
-        background-color: #dff0d8;
-        border-left: 5px solid #3c763d;
-        padding: 1rem;
+      .controls button {
+        padding: 0.6rem 1.2rem;
+        background-color: #007bff;
+        border: none;
+        color: white;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+      .controls button:hover {
+        background-color: #0056b3;
+      }
+
+      .file-section {
         margin-top: 1rem;
-        display: none;
+        text-align: center;
       }
     </style>
   </head>
   <body>
     <h1>Dynamic Quote Generator</h1>
 
-    <div id="quoteDisplay">Click the button to see a quote.</div>
-    <button id="newQuote">Show New Quote</button>
+    <div id="quoteDisplay">Loading quote...</div>
 
-    <h3>Add a New Quote</h3>
-    <input type="text" id="newQuoteText" placeholder="Enter a new quote" />
-    <input
-      type="text"
-      id="newQuoteCategory"
-      placeholder="Enter quote category"
-    />
-    <button onclick="addQuote()">Add Quote</button>
+    <div class="controls">
+      <button id="newQuote">Show New Quote</button>
 
-    <h3>Filter by Category</h3>
-    <select id="categoryFilter" onchange="filterQuotes()">
-      <option value="all">All Categories</option>
-    </select>
+      <select id="categoryFilter">
+        <option value="all">All Categories</option>
+      </select>
 
-    <h3>Import/Export</h3>
-    <input
-      type="file"
-      id="importFile"
-      accept=".json"
-      onchange="importFromJsonFile(event)"
-    />
-    <button onclick="exportToJson()">Export Quotes</button>
+      <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
+      <input
+        id="newQuoteCategory"
+        type="text"
+        placeholder="Enter quote category"
+      />
+      <button onclick="addQuote()">Add Quote</button>
 
-    <div id="notification"></div>
+      <button id="exportBtn">Export Quotes</button>
+
+      <div class="file-section">
+        <input type="file" id="importFile" accept=".json" />
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
