--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,10 +8,17 @@
   <body>
     <h1>Dynamic Quote Generator</h1>
 
+    <!-- Filter Dropdown -->
+    <label for="categoryFilter">Filter by Category:</label>
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+    </select>
+
+    <!-- Quote display and random button -->
     <div id="quoteDisplay"></div>
     <button id="newQuote">Show New Quote</button>
 
-    <!-- JSON Import/Export Controls -->
+    <!-- JSON Import/Export -->
     <h2>Import/Export Quotes</h2>
     <button onclick="exportToJsonFile()">Export Quotes (JSON)</button>
     <input
